--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testcafe-starter",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "description": "starter project for e2e tests with testcafe",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,7 @@
     "prettier-format": "prettier --write \"./**/*.ts\" ",
     "prettier-check": "prettier --list-different \"./**/*.ts\" ",
     "prebuild": "rimraf build",
-    "build": "npm-run-all prettier-format lint tsc",
+    "build": "npm run prettier-format && npm run lint && npm run tsc",
     "pretestcafe-static-analyser": "rimraf reports",
     "testcafe-static-analyser": "testcafe-static-analyser",
     "build-step-mappings": "ts-node step-mappings/generator"
@@ -38,26 +38,25 @@
   "dependencies": {
     "@types/chalk": "2.2.0",
     "@types/minimist": "1.2.0",
-    "@types/node": "10.12.5",
+    "@types/node": "10.12.12",
     "chalk": "2.4.1",
     "cross-env": "5.2.0",
     "jsome": "2.5.0",
     "minimist": "1.2.0",
     "rimraf": "2.6.2",
     "slash": "2.0.0",
-    "testcafe": "0.23.1",
+    "testcafe": "0.23.2",
     "testcafe-live": "0.1.4",
     "testcafe-reporter-teamcity": "1.0.10",
     "ts-node": "7.0.1",
-    "typescript": "3.1.6"
+    "typescript": "3.2.2"
   },
   "devDependencies": {
     "eslint": "5.9.0",
-    "npm-run-all": "4.1.3",
-    "prettier": "1.15.2",
+    "prettier": "1.15.3",
     "testcafe-static-analyser": "0.2.4",
     "tslint": "5.11.0",
-    "tslint-config-prettier": "1.15.0",
+    "tslint-config-prettier": "1.17.0",
     "tslint-config-standard": "8.0.1"
   },
   "engines": {
